# segment-surfaces

./: README.md  pyproject.toml
src/segmentsurfaces/: mark_boundaries.py  view_surfaces.py
